--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <button class="start"><span class="start-label">START</span></button
         ><button class="pause"><span class="pause-label">PAUSE</span></button>
       </div>
+      <div class="esp-terminal"></div>
       <div class="serial-frame">
         <input type="text" class="serial-input" placeholder="Enter command...">
         <button class="serial-send">Send</button>
@@ -77,6 +78,7 @@
           </select>
         </div>
       </div>
+      
       <div class="content">
         <!-- Empty content area -->
       </div>
@@ -153,7 +155,7 @@
         <div class="mission-planner-content">
           <div class="mission-planner-header">
             <h2>Mission Planner</h2>
-            <button class="close-mission-planner">×</button>
+            <button class="close-mission-planner">x</button>
           </div>
           <div class="mission-planner-body">
             <div class="mission-views">
