--- a/index.html
+++ b/index.html
@@ -165,71 +165,106 @@
         <div class="mission-planner-content">
           <div class="mission-planner-header">
             <h2>Mission Planner</h2>
-            <button class="close-mission-planner">x</button>
+            <button class="close-mission-planner" id="close-mission-planner">x</button>
           </div>
+          
           <div class="mission-planner-body">
-            <div class="mission-views">
-              <div class="view-controls">
-                <button class="view-toggle active" data-view="2d">2D View</button>
-                <button class="view-toggle" data-view="3d">3D View</button>
+            <!-- Top section with two frames -->
+            <div class="top-section">
+              <!-- Left frame - Map -->
+              <div class="mission-views">
+                <div class="view-controls">
+                  <button class="view-toggle active" data-view="2d">2D View</button>
+                  <button class="view-toggle" data-view="3d">3D View</button>
+                </div>
+                <div class="view-container">
+                  <canvas id="mission-canvas-2d" class="active"></canvas>
+                  <canvas id="mission-canvas-3d"></canvas>
+                </div>
               </div>
-              <div class="view-container">
-                <canvas id="mission-canvas-2d" class="active"></canvas>
-                <canvas id="mission-canvas-3d"></canvas>
+
+              <!-- Right frame - Controls -->
+              <div class="mission-controls">
+                <div class="available-drones">
+                  <h3>Available Drones</h3>
+                  <div class="drone-list"></div>
+                </div>
+                
+                <div class="waypoint-settings">
+                  <h3>Waypoint Settings</h3>
+                  <div class="waypoint-inputs">
+                    <div class="input-group">
+                      <label>X Position (m)</label>
+                      <input type="number" id="wp-x" step="0.1">
+                    </div>
+                    <div class="input-group">
+                      <label>Y Position (m)</label>
+                      <input type="number" id="wp-y" step="0.1">
+                    </div>
+                    <div class="input-group">
+                      <label>Altitude (m)</label>
+                      <input type="number" id="wp-alt" min="0" step="0.1">
+                    </div>
+                    <div class="input-group">
+                      <label>Heading (deg)</label>
+                      <input type="number" id="wp-heading" min="0" max="360" step="1">
+                    </div>
+                  </div>
+                  <div class="keyframe-controls">
+                    <button class="add-keyframe" id="add-keyframe">Add Keyframe</button>
+                    <button class="delete-keyframe" id="delete-keyframe">Delete Keyframe</button>
+                  </div>
+                </div>
+
+                <div class="playback-controls">
+                  <h3>Mission Playback</h3>
+                  <div class="playback-buttons">
+                    <button class="play-mission" id="play-mission">Play</button>
+                    <button class="stop-mission" id="stop-mission">Stop</button>
+                  </div>
+                  <div class="input-group">
+                    <label>Playback Speed (ms)</label>
+                    <input type="number" id="playback-speed" min="100" max="5000" step="100" value="1000">
+                  </div>
+                  <div class="keyframe-timeline">
+                    <input type="range" id="keyframe-slider" min="0" max="0" value="0">
+                    <span class="keyframe-counter" id="keyframe-counter">0 / 0</span>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="mission-controls">
-              <div class="available-drones">
-                <h3>Available Drones</h3>
-                <div class="drone-list"></div>
-              </div>
-              <div class="waypoint-settings">
-                <h3>Waypoint Settings</h3>
-                <div class="waypoint-inputs">
-                  <div class="input-group">
-                    <label>X Position (m)</label>
-                    <input type="number" id="wp-x" step="0.1">
-                  </div>
-                  <div class="input-group">
-                    <label>Y Position (m)</label>
-                    <input type="number" id="wp-y" step="0.1">
-                  </div>
-                  <div class="input-group">
-                    <label>Altitude (m)</label>
-                    <input type="number" id="wp-alt" min="0" step="0.1">
-                  </div>
-                  <div class="input-group">
-                    <label>Heading (deg)</label>
-                    <input type="number" id="wp-heading" min="0" max="360" step="1">
-                  </div>
+
+            <!-- Bottom section - Keyframes -->
+            <div class="keyframe-section">
+              <div class="keyframe-list">
+                <div class="frame-header">
+                    <span class="frame-title">Frame <span class="frame-number">1</span></span>
+                    <div class="frame-actions">
+                        <button class="frame-btn edit-frame">
+                            <i class="fas fa-edit"></i> Edit
+                        </button>
+                        <button class="frame-btn delete-frame">
+                            <i class="fas fa-trash"></i> Delete
+                        </button>
+                    </div>
                 </div>
-                <div class="keyframe-controls">
-                  <button class="add-keyframe">Add Keyframe</button>
-                  <button class="delete-keyframe">Delete Keyframe</button>
-                </div>
-              </div>
-              <div class="playback-controls">
-                <h3>Mission Playback</h3>
-                <div class="playback-buttons">
-                  <button class="play-mission">Play</button>
-                  <button class="stop-mission">Stop</button>
-                </div>
-                <div class="input-group">
-                  <label>Playback Speed (ms)</label>
-                  <input type="number" id="playback-speed" min="100" max="5000" step="100" value="1000">
-                </div>
-                <div class="keyframe-timeline">
-                  <input type="range" id="keyframe-slider" min="0" max="0" value="0">
-                  <span class="keyframe-counter">0 / 0</span>
+                <div class="drone-positions">
+                    <div class="drone-position">
+                        <span class="drone-id">MCU</span>
+                        <span class="position">X: 0.0, Y: 0.0, Z: 2.0</span>
+                        <span class="heading">H: 0°</span>
+                        <button class="edit-drone">Edit</button>
+                    </div>
+                    <!-- More drone positions... -->
                 </div>
               </div>
             </div>
           </div>
+
           <div class="mission-planner-footer">
-            <input type="file" id="load-mission" accept=".json" style="display: none;">
-            <button class="load-mission">Load Mission</button>
-            <button class="save-mission">Save Mission</button>
-            <button class="clear-mission">Clear</button>
+            <button class="load-mission" id="load-mission">Load Mission</button>
+            <button class="save-mission" id="save-mission">Save Mission</button>
+            <button class="clear-mission" id="clear-mission">Clear</button>
           </div>
         </div>
       </div>
