--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
       </div>
       <div class="down-bar">
         <div class="drone-selection">
-          <button class="button-drone-mcu">
-            <span class="mcu-26">MCU</span>
-          </button>
+          <button class="button-arm-all">Arm All</button>
+          <button class="button-launch-all">Launch All</button>
+          <button class="button-land-all">Land All</button>
         </div>
       </div>
       <div class="modes-dropdown" style="display: none;">
