--- a/index.html
+++ b/index.html
@@ -254,7 +254,12 @@
                         <span class="heading">H: 0°</span>
                         <button class="edit-drone">Edit</button>
                     </div>
-                    <!-- More drone positions... -->
+                </div>
+                <div class="frame-delay-container">
+                    <div class="delay-input-container">
+                        <input type="number" class="delay-input" value="1000" min="100" max="10000" step="100">
+                        <span class="delay-unit">ms</span>
+                    </div>
                 </div>
               </div>
             </div>
@@ -264,6 +269,23 @@
             <button class="load-mission" id="load-mission">Load Mission</button>
             <button class="save-mission" id="save-mission">Save Mission</button>
             <button class="clear-mission" id="clear-mission">Clear</button>
+          </div>
+        </div>
+      </div>
+      <div class="logbook-popup" style="display: none;">
+        <div class="logbook-content">
+          <div class="logbook-header">
+            <h2>Logbook</h2>
+            <button class="close-logbook" id="close-logbook">x</button>
+          </div>
+          
+          <div class="logbook-body">
+            <div class="log-files-list">
+              <!-- Log files will be listed here -->
+            </div>
+            <div class="log-content">
+              <pre class="log-viewer"></pre>
+            </div>
           </div>
         </div>
       </div>
