--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
           <span class="program-title">PROGRAM</span>
           <div class="select-14">
             <select class="program-select">
-              <option value="square">Square</option>
-              <option value="circle">Circle</option>
-              <option value="triangle">Triangle</option>
-              <option value="line">Line</option>
+              <option value="">Select Mission</option>
             </select>
             <div class="down-arrow-15">
               <div class="vector-16"></div>
