--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@
                       <div class="input-group" id="light-color-picker" style="display: none;">
                         <label>Light Color</label>
                         <input type="color" id="light-color" value="#ff0000">
+                        <div class="light-effects">
+                          <button class="light-effect-btn" id="rainbow-effect">Rainbow</button>
+                          <button class="light-effect-btn" id="chase-effect">Chase</button>
+                        </div>
                       </div>
                       <button class="add-command" id="add-command">Add Command</button>
                     </div>
