--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                     <button class="drone-toggle" data-drone="CD3">CD3: OFF</button>
                     <button class="drone-toggle" data-drone="CD4">CD4: OFF</button>
                 </div>
-                <div class="ned-info">Controls: W/S: ±X, A/D: ±Y, U/J: ±Z</div>
+                <button class="servo-toggle">SERVO: CLOSED</button>
+                <div class="ned-info">Controls: W/S: ±X, A/D: ±Y, Q/E: ±Z</div>
             </div>
         </div>
       </div>
@@ -219,6 +220,15 @@
                     </div>
                   </div>
                   
+                  <div class="keyboard-control-section">
+                    <button class="keyboard-control-toggle" id="keyboard-control-toggle">
+                      Keyboard Control: OFF
+                    </button>
+                    <div class="keyboard-control-info">
+                      Controls: W/S: ±Y, A/D: ±X, U/J: ±Z
+                    </div>
+                  </div>
+
                   <div class="custom-command-settings">
                     <h3>Custom Commands</h3>
                     <div class="command-inputs">
