--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
       </div>
       <div class="esp-terminal">
         <div class="esp-terminal-header">
-          <span class="esp-terminal-title">ESP Terminal</span>
-          <button class="esp-terminal-close">&times;</button>
+          <span class="esp-terminal-title">TERMINAL</span>
         </div>
         <div class="esp-terminal-content"></div>
         <div class="esp-terminal-input">
@@ -240,7 +239,6 @@
                 </div>
 
                 <div class="custom-command-settings">
-                  <h3>Custom Commands</h3>
                   <div class="command-inputs">
                     <div class="input-group">
                       <label>Command</label>
@@ -257,6 +255,7 @@
                       <div class="light-effects">
                         <button class="light-effect-btn" id="rainbow-effect">Rainbow</button>
                         <button class="light-effect-btn" id="chase-effect">Chase</button>
+                        <button class="light-effect-btn" id="flash-effect">Flash</button>
                       </div>
                     </div>
                     <button class="add-command" id="add-command">Add Command</button>
